# proof-of-location

./: Cargo.toml  README.md  build-server-aarch64.sh  configure-url-port.sh  docker-compose.yml  metadata.scale  setup-offchain-key.sh  zombienet.toml
docker/development-container/: Dockerfile  entrypoint.sh
measurements/: analysis.ipynb  dist_12_steps.txt  dist_3_steps.txt  dist_6_steps.txt
monitor/: Cargo.toml  README.md
monitor/src/: main.rs  score.rs
node/: Cargo.toml
node/src/: main.rs  rpc.rs  rpc_trust_score.rs
pallets/proof-of-location/: Cargo.toml  README.md
pallets/proof-of-location/src/: benchmarking.rs  lib.rs  mock.rs  offchain_worker.rs  pallet_calls.rs  rpc.rs  rpc_impl.rs  tests.rs  util.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
server/: Cargo.toml  README.md
server/src/: bluetooth.rs  main.rs  neighbor.rs
simulator/: Cargo.toml  README.md
simulator/src/: main.rs  ui.html
trust-score/: Cargo.toml
trust-score/src/: main.rs  score.rs
