[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "monitor"
repository.workspace = true
version = "0.1.0"

[dependencies]
dotenvy = { workspace = true }
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
subxt = { workspace = true }
subxt-signer = "0.38.1"
tokio = { workspace = true, features = ["full"] }
