[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "server"
repository.workspace = true
version = "0.1.0"

[dependencies]
axum = "0.7"
btleplug = "0.11"
codec = { workspace = true, features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
