[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "server"
repository.workspace = true
version = "0.1.0"

[dependencies]
axum = "0.7"
bluer = { version = "0.17", features = ["bluetoothd"] }
codec = { workspace = true, features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install -y libdbus-1-dev:$CROSS_DEB_ARCH pkg-config protobuf-compiler",
]
