[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "server"
repository.workspace = true
version = "0.1.0"

[dependencies]
axum = { workspace = true }
bluer = { version = "0.17", features = ["bluetoothd"] }
codec = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
futures = { workspace = true }
haversine-redux = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install -y libdbus-1-dev:$CROSS_DEB_ARCH pkg-config protobuf-compiler",
]
