[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "simulator"
repository.workspace = true
version = "0.1.0"

[dependencies]
axum = { workspace = true }
codec = { workspace = true, features = ["derive"] }
haversine-redux = { workspace = true }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
