[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "trust-score"
repository.workspace = true
version = "0.1.0"

[dependencies]
dotenvy = { workspace = true }
haversine-redux = { workspace = true }
subxt = { workspace = true }
subxt-signer = "0.38.1"
tokio = { workspace = true, features = ["full"] }
