[package]
authors.workspace = true
description = "FRAME pallet for storing decentralized location data on a substrate blockchain."
edition.workspace = true
homepage.workspace = true
license = "Unlicense"
name = "pallet-proof-of-location"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
haversine-redux = { workspace = true, features = ["no_std"] }
libm = { version = "0.2", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-api.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime/std",
	"log/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
